--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
 }
 header {
   background: #fafaf3;
-  border-radius: 10px;
+  border-radius: 8px;
   max-width: 800px;
   color: #2b4450;
   margin: 0 auto;
@@ -28,11 +28,11 @@ header {
 }
 main {
   background: #fafaf3;
-  border-radius: 10px;
+  border-radius: 8px;
   color: #2b4450;
   padding-bottom: 25px;
-  max-width: 800px;
-
+  max-width: 600px;
+  border-left: 10px solid rgb(44, 44, 44);
   margin: 0 auto;
   box-shadow: 10px 10px 20px rgba(2, 2, 0, 0.2);
 }
@@ -63,7 +63,7 @@ form {
   border-radius: 20px;
 }
 .poem {
-  padding-top: 30px;
+  padding: 30px;
   text-align: center;
 
   line-height: 2;
