--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   font-family: "Bitter", serif;
 }
 h1 {
-  margin-top: 10px;
-  color: #393e46;
+  margin-top: 100px;
+  color: #2b4450;
   padding-top: 10px;
   line-height: 1.5;
   font-size: 40px;
@@ -67,7 +67,7 @@ form {
   text-align: center;
 
   line-height: 2;
-  font-size: 18px;
+  font-size: 19px;
 }
 footer {
   margin-top: 700px;
