--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ main {
   color: #2b4450;
   padding-bottom: 25px;
   max-width: 600px;
-  border-left: 10px solid rgb(44, 44, 44);
+
   margin: 0 auto;
   box-shadow: 10px 10px 20px rgba(2, 2, 0, 0.2);
+  display: none;
 }
 form {
   padding: 10px;
@@ -61,8 +62,22 @@ form {
   font-size: 15px;
   border-radius: 20px;
 }
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
 .poem {
-  padding: 30px;
+  padding: 20px;
   text-align: center;
 
   line-height: 2;
