--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
-  background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/510/original/letters.jpg?1704563245);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #85865f;
   text-align: center;
   font-family: "Bitter", serif;
 }
@@ -77,7 +75,7 @@ form {
   }
 }
 .poem {
-  padding: 20px;
+  padding: 15px;
   text-align: center;
 
   line-height: 2;
