Changed css of footer

--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ form {
   font-size: 19px;
 }
 footer {
-  margin-top: 700px;
+  margin-top: 500px;
   font-size: 15px;
 
-  color: #7accf5;
+  color: black;
 }
