--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Bitter", serif;
 }
 h1 {
-  margin-top: 100px;
+  margin-top: 80px;
   color: #2b4450;
   padding-top: 10px;
   line-height: 1.5;
@@ -29,7 +29,7 @@ main {
   color: #2b4450;
   padding-bottom: 25px;
   max-width: 600px;
-
+  border-left: 10px solid #393e46;
   margin: 0 auto;
   box-shadow: 10px 10px 20px rgba(7, 7, 7, 0.2);
   display: none;
@@ -56,7 +56,6 @@ form {
   border: none;
   width: 100px;
   margin-left: 10px;
-  box-shadow: #393e46;
   font-size: 15px;
   border-radius: 20px;
 }
