--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
-  background-color: #85865f;
+  background: linear-gradient(
+    109.6deg,
+    rgb(27, 27, 79) 11.2%,
+    rgb(120, 201, 244) 100.2%
+  );
   text-align: center;
   font-family: "Bitter", serif;
 }
 h1 {
   margin-top: 80px;
-  color: #2b4450;
+  color: rgb(10, 8, 131);
   padding-top: 10px;
   line-height: 1.5;
   font-size: 40px;
@@ -18,8 +22,7 @@ h1 {
 header {
   background: #fafaf3;
   border-radius: 8px;
-  max-width: 800px;
-  color: #2b4450;
+  max-width: 700px;
   margin: 0 auto;
   box-shadow: 10px 10px 20px rgba(7, 7, 7, 0.2);
 }
@@ -35,10 +38,10 @@ main {
   display: none;
 }
 form {
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
   display: flex;
-
+  margin-left: 70px;
   justify-content: center;
 }
 .type {
@@ -50,11 +53,11 @@ form {
   line-height: 12px;
 }
 .click {
-  padding: 15px;
-  background: #5ec1f3;
+  padding: 10px;
+  background: #0e5274;
   color: white;
   border: none;
-  width: 100px;
+  width: 90px;
   margin-left: 10px;
   font-size: 15px;
   border-radius: 20px;
@@ -74,10 +77,10 @@ form {
   }
 }
 .poem {
-  padding: 15px;
+  padding: 20px;
   text-align: center;
 
-  line-height: 2;
+  line-height: 1.5;
   font-size: 19px;
 }
 footer {
@@ -85,4 +88,19 @@ footer {
   font-size: 15px;
 
   color: black;
+}
+@media (max-width: 800px) {
+  header {
+    margin: 32px;
+  }
+  h1 {
+    font-size: 32px;
+  }
+
+  .emoji {
+    font-size: 20px;
+  }
+  .poem {
+    font-size: 15px;
+  }
 }
