button color changed

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ form {
 }
 .click {
   padding: 10px;
-  background: #0e5274;
+  background: #fcbe39;
   color: white;
   border: none;
   width: 90px;
