--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     rgb(27, 27, 79) 11.2%,
     rgb(120, 201, 244) 100.2%
   );
+  background-repeat: no-repeat;
   text-align: center;
   font-family: "Bitter", serif;
 }
