--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body {
-  background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(64, 64, 64) 90.2%);
-  background-repeat: no-repeat;
-  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  url("love-book.jpg");
+  background-repeat: none;
+  background-size: cover;
+  background-position: center;
   font-family: "Bitter", serif;
 }
 h1 {
   margin-top: 80px;
-  color: #86003C;
+  color: #009da5;
   padding-top: 10px;
+  text-align: center;
   line-height: 1.5;
   font-size: 40px;
 }
@@ -21,15 +24,17 @@ header {
   border-radius: 8px;
   max-width: 700px;
   margin: 0 auto;
-  box-shadow: 10px 10px 20px rgba(7, 7, 7, 0.2);
+
 }
 main {
   background: #fafaf3;
   border-radius: 8px;
-  color:#86003C;
+  color:#3c5746;
+  
   padding-bottom: 25px;
   max-width: 600px;
-  border-left: 10px solid ;
+  border-left: 10px solid #3c5746;
+  border-radius: 8px;
   margin: 0 auto;
   box-shadow: 10px 10px 20px rgba(7, 7, 7, 0.2);
   display: none;
@@ -51,7 +56,7 @@ form {
 }
 .click {
   padding: 10px;
-  background: #FF8BA0;
+  background: #7cad8e;
   color: white;
   border: none;
   width: 90px;
