--- a/style.css
+++ b/style.css
@@ -30,13 +30,12 @@ main {
   background: #fafaf3;
   border-radius: 8px;
   color:#3c5746;
-  
-  padding-bottom: 25px;
+ 
+  padding-bottom: 2px;
   max-width: 600px;
   border-left: 10px solid #3c5746;
   border-radius: 8px;
   margin: 0 auto;
-  box-shadow: 10px 10px 20px rgba(7, 7, 7, 0.2);
   display: none;
 }
 form {
@@ -48,8 +47,8 @@ form {
 }
 .type {
   font-size: 15px;
-  padding: 15px;
-  width: 30%;
+  padding: 14px 18px;
+  width: 40%;
   border: black;
   border-radius: 10px;
   line-height: 12px;
@@ -62,7 +61,7 @@ form {
   width: 90px;
   margin-left: 10px;
   font-size: 15px;
-  border-radius: 20px;
+  border-radius: 18px;
 }
 .generating {
   animation: blink-animation 1s steps(5, start) infinite;
@@ -83,7 +82,7 @@ form {
   text-align: center;
 
   line-height: 1.5;
-  font-size: 19px;
+  font-size: 20px;
 }
 footer {
   margin-top: 500px;
@@ -93,16 +92,27 @@ footer {
 }
 @media (max-width: 800px) {
   header {
-    margin: 32px;
+    margin: 20px;
+    max-width: 600px;
+    padding: 0 20px 30px ;
   }
   h1 {
-    font-size: 32px;
+    font-size: 25px;
+    margin-top: 10px;
+  padding-top: 20px;
   }
-
+main{
+  padding: 20px;
+  margin: 10px;
+}
   .emoji {
     font-size: 20px;
   }
+  .type {
+width:100%;
+padding: 10px 12px 10px;
+  }
   .poem {
-    font-size: 15px;
+    font-size: 18px;
   }
 }
